 2012-02-22 01:29  robocop 
   M src/dsql/Nodes.h
Misc.

 2012-02-20 21:52  asfernandes 
   M src/common/IntlUtil.cpp
   M src/jrd/blb.cpp
   M src/jrd/cvt2.cpp
   M src/jrd/mov.cpp
Misc.

 2012-02-20 02:02  asfernandes 
   M src/dsql/DdlNodes.epp
   M src/dsql/DsqlCompilerScratch.h
   M src/dsql/Nodes.h
   M src/dsql/PackageNodes.epp
   M src/dsql/Parser.cpp
   M src/dsql/Parser.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/StmtNodes.h
   M src/dsql/ddl.cpp
   M src/dsql/ddl_proto.h
   M src/dsql/dsql.cpp
   M src/dsql/dsql.h
   M src/dsql/gen.cpp
   M src/dsql/gen_proto.h
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/dsql/pass1_proto.h
Remove legacy statements residuals.

 2012-02-19 02:17  asfernandes 
   M builds/win32/msvc10/engine.vcxproj
   M builds/win32/msvc10/engine.vcxproj.filters
   M builds/win32/msvc9/engine.vcproj
   M builds/win32/preprocess.bat
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/ddl.cpp
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/jrd/drq.h
   D src/jrd/dyn.epp
   M src/jrd/dyn.h
   D src/jrd/dyn_proto.h
   M src/jrd/dyn_ut_proto.h
   M src/jrd/dyn_util.epp
   M src/jrd/grant.epp
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql
Refactor GRANT and REVOKE commands. This eliminates the DYN subsystem.

 2012-02-16 01:11  asfernandes 
   M src/jrd/blb.cpp
   M src/jrd/blb.h
Warnings.

 2012-02-15 07:13  robocop 
   M src/dsql/metd.epp
   M src/jrd/blb.cpp
   M src/jrd/blb.h
   M src/jrd/extds/ExtDS.cpp
   M src/jrd/fun.epp
   M src/jrd/inf.cpp
   M src/jrd/jrd.cpp
   M src/jrd/met.epp
   M src/jrd/scl.epp
Make more members of blb private.

 2012-02-15 03:44  robocop 
   M src/jrd/inf.cpp
   M src/jrd/jrd.h